# MyGame

./: .gitignore  CMakeLists.txt  build.bat  build_entt.bat  build_fpm.bat  build_game.bat  build_json.bat  build_protobuf.bat  build_spdlog.bat  kcp.txt  server.json  skill_machine.json  伪代码整理逻辑.txt  数值系统.txt
Asset/: Hero.json  (+2 more)
Client/: CMakeLists.txt  ClientGameHelper.cpp  ClientGameHelper.hpp  ClientNetwork - 副本.cpp  ClientNetwork - 副本.hpp  ClientNetwork.cpp  ClientNetwork.hpp  ClientNetworkImpl.cpp  ClientNetworkImpl.hpp  ClientNetworkService.cpp  ClientNetworkService.hpp  UnityBridge.cpp  UnityBridge.hpp  UnityDebugService.cpp  UnityDebugService.hpp  UnityFileService.cpp  UnityFileService.hpp  UnityInputService.cpp  UnityInputService.hpp  UnityLogService.cpp  UnityLogService.hpp  UnityViewImpl.cpp  UnityViewImpl.hpp  UnityViewService.cpp  UnityViewService.hpp  main.cpp
Client/System/: ClientSyncSystem.hpp
Framework/Game/: CMakeLists.txt  Collision.cpp  Collision.hpp  ConfigManager.hpp  DebugService.hpp  FileService.cpp  FileService.hpp  FixedPoint.hpp  Fmt.hpp  Game.cpp  Game.hpp  GameConfig.hpp  GameDefin.hpp  GameHelper.hpp  Geometry.hpp  Hash.hpp  IViewImpl.hpp  InputService.hpp  Json.hpp  Locator.hpp  LogService.hpp  Math.hpp  NetworkService.hpp  PlayerInfo.hpp  Proto.hpp  RingArray.hpp  Service.hpp  System.hpp  ViewService.hpp
Framework/Game/Component/: ActionState.hpp  ActorAsset.hpp  ActorState.hpp  Animation.hpp  AnimationAsset.hpp  AnimationClip.hpp  Asset.hpp  Attributes.hpp  BoundingBox.hpp  Collider.hpp  ColliderInfo.hpp  Command.hpp  Commond.hpp  CommondList.hpp  Contact.hpp  GameState.hpp  Health.hpp  Local.hpp  MainPlayer.hpp  Matrix4x4.hpp  Movement.hpp  PhysicsActor.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Player.hpp  Position.hpp  Remote.hpp  Skill.hpp  SkillGraphAsset.hpp  SkillState.hpp  State.hpp  Transform.hpp  TransformState.hpp  View.hpp  ViewAsset.hpp  Weapon.hpp
Framework/Game/Data/: ActorConfig.hpp  AnimationConfig.hpp  Config.hpp  RootMotionConfig.cpp  RootMotionConfig.hpp  SkillGraph.cpp  SkillGraph.hpp
Framework/Game/System/: ActionStateMachineSystem.hpp  ActorStateSystem.hpp  AnimationSystem.hpp  CollisionSystem.hpp  CommandProcessSystem.hpp  CommondProcessSystem.hpp  CreateActorSystem.hpp  CreateAnimationSystem.hpp  CreatePhysicsActorSystem.hpp  CreateSkillGraphSystem.hpp  CreateViewSystem.hpp  DebugSystem.hpp  HealthSystem.hpp  InputSystem.hpp  ModifyHealthSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp  RootMotionSystem.hpp  SkillStateSystem.hpp  SkillSystem.hpp  SyncSystem.hpp  TransformStateSystem.hpp  UpdateColliderTransformSystem.hpp  UpdateViewSystem.hpp
Framework/Game/Utility/: ActionStateUtility.hpp  ActorStateUtility.hpp  ActorUtility.hpp  CollisionUtility.hpp  PhysicsUtility.hpp
Framework/Kanex/Src/: Access.hpp  Archive.hpp  BinaryArchive.hpp  BinaryStream.hpp  Buffer.hpp  CMakeLists.txt  Kanex.hpp  main.cpp
Framework/Kanex/Src/Internal/: Traits.hpp  Types.hpp
Framework/Kanex/Src/Types/: Array.hpp  Map.hpp  Pair.hpp  Set.hpp  String.hpp  Vector.hpp
Framework/Proto/: Battle.pb.cc  Battle.pb.h  CMakeLists.txt  ChangeUserName.pb.cc  ChangeUserName.pb.h  Login.pb.cc  Login.pb.h  MatchingBattle.pb.cc  MatchingBattle.pb.h  NetMessage.hpp  ProtoDef.hpp  RegisterAccount.pb.cc  RegisterAccount.pb.h  UserData.pb.cc  UserData.pb.h
Server/: ActorNet.sln  CMakeLists.txt  CreateActor.py  main.cpp
Server/ActorNet/: Actor.cpp  Actor.h  ActorLoader.cpp  ActorLoader.h  ActorMessage.h  ActorNet.cpp  ActorNet.h  ActorNet.vcxproj  ActorNet.vcxproj.filters  CMakeLists.txt  Config.hpp  IActor.h  MessageCore.cpp  MessageCore.h  NetworkActor.cpp  NetworkActor.hpp  NetworkComponent.cpp  NetworkComponent.hpp  TimerActor.cpp  TimerActor.hpp  main.cpp
Server/ActorNet/Common/: Singleton.h  typedef.h
Server/ActorNet/Debug/: vc141.idb
Server/ActorNet/Debug/ActorNet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/ActorNet/Network/: Connection.cpp  Connection.hpp  ISessionHandler.h  Message.cpp  Message.h  Network.cpp  Network.h  NetworkActor.cpp  NetworkActor.hpp  Session.cpp  Session.h  Timer.cpp  Timer.h
Server/ActorNet/class/actor_net/: ActorNet.cpp  IActor.h  MessageCore.cpp  MessageCore.h
Server/ActorNet/class/common/: Util.h
Server/AgentActor/: AgentActor.cpp  AgentActor.hpp  CMakeLists.txt
Server/BattleActor/: BattleActor.cpp  BattleActor.hpp  CMakeLists.txt  ServerDebugService.cpp  ServerDebugService.hpp  ServerFileService.cpp  ServerFileService.hpp  ServerGameHelper.cpp  ServerGameHelper.hpp  ServerInputService.cpp  ServerInputService.hpp  ServerNetworkService.cpp  ServerNetworkService.hpp  ServerViewImpl.cpp  ServerViewImpl.hpp  ServerViewService.cpp  ServerViewService.hpp
Server/BattleActor/System/: ServerSyncSystem.hpp
Server/Debug/: ActorNet.ilk  StartActor.exp  StartActor.ilk
Server/EmptyActor/: CMakeLists.txt  EmptyActor.cpp  EmptyActor.hpp  EmptyActor.vcxproj
Server/HarborActor/: CMakeLists.txt  HarborActor.cpp  HarborActor.hpp
Server/KcpGateActor/: CMakeLists.txt  KcpConnection.cpp  KcpConnection.hpp  KcpGateActor.cpp  KcpGateActor.hpp
Server/KcpGateActor/Kcp/: ikcp.c
Server/LogActor/: LogActor.vcxproj
Server/LogActorActor/: CMakeLists.txt  LogActorActor.cpp  LogActorActor.hpp
Server/MasterActor/: CMakeLists.txt  MasterActor.cpp  MasterActor.hpp  MasterActor.vcxproj
Server/MatchActor/: CMakeLists.txt  MatchActor.cpp  MatchActor.hpp
Server/ServerApp/: CMakeLists.txt  main.cpp
Server/StartActor/: CMakeLists.txt  StartActor.cpp  StartActor.h  StartActor.vcxproj  StartActor.vcxproj.filters
Server/StartActor/Debug/: vc141.idb
Server/actor_class/: StartActor.h
Test/: CMakeLists.txt  main.cpp
Test/AsioClient/: CMakeLists.txt  main.cpp
Test/AsioServer/: CMakeLists.txt  main.cpp
Test/KcpClient/: CMakeLists.txt  main.cpp
Test/OctTree/: CMakeLists.txt  Collision.hpp  ECSOctTree.hpp  OctTree.hpp  Primitive.hpp  main.cpp
Test/PhysXTest/: CMakeLists.txt  main.cpp
Test/Serialize/: CMakeLists.txt  main.cpp
(+309 files in other folders)
