cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 17)
project(MyGame)

#Ê∑ªÂä†camkeÊ®°Âùó
include(cmake/common.cmake)

#ËÆæÁΩÆÊñá‰ª∂Â§πÂΩíÁ±?
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

if(WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
endif()

set(CMAKE_PREFIX_PATH "${PROJECT_SOURCE_DIR}/3rdparty/lib/cmake")
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}" CACHE PATH "${PROJECT_SOURCE_DIR}" FORCE)
endif()

#Ê∑ªÂä†ÁõÆÂΩïÂºïÁî®
include_directories("${PROJECT_SOURCE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/3rdparty/include")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Kanex/Src")

#define debug
set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -D_DEBUG")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/release)

set(PROTOBUF_LIB_PATH ${PROJECT_SOURCE_DIR}/3rdparty/lib/)
message(${PROTOBUF_LIB_PATH})

#ÂØªÊâæprotobuf
find_library(PROTOBUF_LIBRARY_DEBUG NAMES libprotobufd PATHS ${PROTOBUF_LIB_PATH})
find_library(PROTOBUF_LITE_LIBRARY_DEBUG NAMES libprotobuf-lited PATHS ${PROTOBUF_LIB_PATH})
find_library(PROTOBUF_LIBRARY NAMES libprotobuf PATHS ${PROTOBUF_LIB_PATH})
find_library(PROTOBUF_LITE_LIBRARY NAMES libprotobuf-lite PATHS ${PROTOBUF_LIB_PATH})

#Êî∂ÈõÜprotoÊñá‰ª∂
file(GLOB_RECURSE PROTO_SRC ${PROJECT_SOURCE_DIR}/Framework/Proto/*.h ${PROJECT_SOURCE_DIR}/Framework/Proto/*.cc)

add_subdirectory(Framework)
add_subdirectory(Client)
add_subdirectory(Server)
add_subdirectory(Test)
add_subdirectory(ClientProxy)

#ÂÆâË£ÖMyGameClientÂà∞Unity PluginsÁõÆÂΩï‰∏?
install(TARGETS MyGameClient
    RUNTIME DESTINATION Unity/ARPG
    LIBRARY DESTINATION Unity/ARPG
    )
install(FILES ${PROJECT_SOURCE_DIR}/bin/debug/MyGameClient.pdb DESTINATION Unity/ARPG)

install(TARGETS ClientProxy
RUNTIME DESTINATION Unity/ARPG/Assets/Plugins
LIBRARY DESTINATION Unity/ARPG/Assets/Plugins
)
install(FILES ${PROJECT_SOURCE_DIR}/bin/debug/ClientProxy.pdb DESTINATION Unity/ARPG/Assets/Plugins)